<?xml version="1.0" encoding="utf-8"?>
<resources>
    // Application
    <string name="app_name">NewTestApp</string>

    // Main menu
    <string name="menu_clear_profile">Clear profiles</string>
    <string name="menu_close">Close application</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_birthday_notification">Birthday notifications</string>

    <string name="pref_birthday_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_birthday_vibrate">Vibrate</string>

    <string name="pref_birthday_vibration_list">Vibration mode</string>

    <string-array name="pref_birthday_vibration_entries">
        <item>Single vibration</item>
        <item>2 Vibrations</item>
        <item>3 Vibrations</item>
        <item>5 Vibrations</item>
        <item>10 Vibrations</item>
        <item>50 Vibrations</item>
    </string-array>

    <string-array name="pref_birthday_vibration_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>5</item>
        <item>10</item>
        <item>50</item>
    </string-array>

    <string name="pref_birthday_toast">Birthday toast</string>
</resources>
